# btzsc

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
hf/: publish_to_hf.py
hf/leaderboard_space/: README.md  app.py  requirements.txt
hf/results_repo/: README.md  SUBMISSION.md  validate.py
hf/results_repo/.github/workflows/: validate-pr.yml
hf/results_repo/results/embedding/: Qwen3-Embedding-0.6B.json  Qwen3-Embedding-8B.json  all-MiniLM-L6-v2.json  bge-base-en-v1.5.json  bge-large-en-v1.5.json  e5-base-v2.json  e5-large-v2.json  e5-mistral-7b-instruct.json  gte-base-en-v1.5.json  gte-large-en-v1.5.json  gte-modernbert-base.json
hf/results_repo/results/llm/: Llama-3.2-3B-Instruct.json  Mistral-Nemo-Instruct-2407.json  Phi-4-mini-instruct.json  Qwen3-4B.json  Qwen3-8B.json  gemma-3-1b-it.json  gemma-3-270m-it.json
hf/results_repo/results/nli/: bart-large-mnli.json  bert-base-uncased-nli.json  bert-large-uncased-nli-triplet.json  bert-large-uncased-nli.json  deberta-v3-base-nli.json  deberta-v3-large-nli-triplet.json  deberta-v3-large-nli.json  modernbert-base-nli.json  modernbert-large-nli-triplet.json  modernbert-large-nli.json  nli-roberta-base.json
hf/results_repo/results/reranker/: Qwen3-Reranker-0.6B.json  Qwen3-Reranker-8B.json  bge-reranker-base.json  bge-reranker-large.json  gte-reranker-modernbert-base.json  ms-marco-MiniLM-L6-v2.json
hf/results_repo/scripts/: seed_from_baselines.py
src/btzsc/: __init__.py  baselines.py  benchmark.py  cli.py  data.py  metrics.py  validate.py
src/btzsc/_baselines/: acc_scores.csv  f1_scores.csv  precision_scores.csv  recall_scores.csv  roc_scores.csv
src/btzsc/_meta/: datasets.yml  models.yml
src/btzsc/leaderboard/: __init__.py  validate.py
src/btzsc/models/: __init__.py  base.py  embedding.py  llm.py  nli.py  reranker.py
