[project]
name = "btzsc"
version = "0.1.1"
description = "BTZSC: A Benchmark for Zero-Shot Text Classification across Cross-Encoders, Embedding Models, Rerankers and LLMs"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Ilias Aarab", email = "ilias.aarab@ecb.europa.eu" }]
requires-python = ">=3.10"
keywords = [
    "nlp",
    "zero-shot",
    "text-classification",
    "benchmark",
    "transformers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "gradio>=6.8.0",
]

[project.scripts]
btzsc = "btzsc.cli:main"

[project.urls]
Homepage = "https://github.com/aarabil/btzsc"
Documentation = "https://github.com/aarabil/btzsc"
Repository = "https://github.com/aarabil/btzsc"
"Bug Tracker" = "https://github.com/aarabil/btzsc/issues"
Paper = "https://openreview.net/forum?id=TODO"
Dataset = "https://huggingface.co/datasets/btzsc/btzsc"

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
